fix issue with forecast on small screens

--- a/src/screens/DashboardPage/components/Forecast/styles.scss
+++ b/src/screens/DashboardPage/components/Forecast/styles.scss
@@ -1,5 +1,6 @@
 .forecast {
   &__container {
+    height: 100%;
     padding: 26px;
   }
 
